--- a/P_Bulle_Docker - ASP.NET/wwwroot/css/site.css
+++ b/P_Bulle_Docker - ASP.NET/wwwroot/css/site.css
@@ -24,8 +24,15 @@ body {
     height: 50px;
 }
 
-#square {
-    border: 2px dashed gray;
+.square {
+    border: 2px dashed white;
     width: 50px;
     height: 50px;
+}
+
+.squares {
+    border: 2px dashed white;
+    width: 50px;
+    height: 50px;
+    background-color: red;
 }
